# wyag

./: .gitignore  Makefile  README.md  pyproject.toml  wyag.py
libs/: cli.py  version.py
tests/: conftest.py
tests/functional/: test_cli.py
tests/unit/: test_version.py
tests/unit/libs/: test_version.py
